--- a/WebApplicationLogin/Resources/HomeLang.De.resx
+++ b/WebApplicationLogin/Resources/HomeLang.De.resx
@@ -118,66 +118,66 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="ConfirmPassword" xml:space="preserve">
-    <value>Powtórz hasło</value>
+    <value>パスワードを繰り返します。</value>
   </data>
   <data name="eDziennik" xml:space="preserve">
-    <value>eDziennik</value>
+    <value>学校登録</value>
   </data>
   <data name="e_Dziennik" xml:space="preserve">
-    <value>e-Dziennik</value>
+    <value>学校登録</value>
   </data>
   <data name="ForgotYourPassword" xml:space="preserve">
-    <value>Zapomniałeś hasła?</value>
+    <value>パスワードを忘れましたか？</value>
   </data>
   <data name="Internetowydziennik" xml:space="preserve">
-    <value>Internetowy dziennik</value>
+    <value>オンラインジャーナル学校</value>
   </data>
   <data name="Language" xml:space="preserve">
-    <value>Język</value>
+    <value>言語</value>
   </data>
   <data name="Login" xml:space="preserve">
-    <value>Login</value>
+    <value>ログイン</value>
   </data>
   <data name="Name" xml:space="preserve">
-    <value>Imię</value>
+    <value>名前</value>
   </data>
   <data name="Nauczyciel" xml:space="preserve">
-    <value>Nauczyciel</value>
+    <value>教師</value>
   </data>
   <data name="Password" xml:space="preserve">
-    <value>Hasło</value>
+    <value>パスワード</value>
   </data>
   <data name="Registerasanewuser" xml:space="preserve">
-    <value>Zarejestruj mnie jako nowego użytkownika</value>
+    <value>新規ユーザーとして私に参加</value>
   </data>
   <data name="Remember" xml:space="preserve">
-    <value>Zapamiętaj mnie</value>
+    <value>私を忘れないでください</value>
   </data>
   <data name="Rodzic" xml:space="preserve">
-    <value>Rodzic</value>
+    <value>両親</value>
   </data>
   <data name="Sekcjadlanauczycieli" xml:space="preserve">
-    <value>Sekcja dla nauczycieli</value>
+    <value>教師のためのセクション</value>
   </data>
   <data name="Sekcjadlarodziców" xml:space="preserve">
-    <value>Sekcja dla rodziców</value>
+    <value>親のためのセクション</value>
   </data>
   <data name="Sekcjadlauczniów" xml:space="preserve">
-    <value>Sekcja dla uczniów</value>
+    <value>学生のためのセクション</value>
   </data>
   <data name="Student" xml:space="preserve">
-    <value>Uczeń</value>
+    <value>学生</value>
   </data>
   <data name="Surname" xml:space="preserve">
-    <value>Nazwisko</value>
+    <value>姓</value>
   </data>
   <data name="Username" xml:space="preserve">
-    <value>Login</value>
+    <value>ログイン</value>
   </data>
   <data name="Zaloguj" xml:space="preserve">
-    <value>Zaloguj</value>
+    <value>ログイン</value>
   </data>
   <data name="Zobacz" xml:space="preserve">
-    <value>Zobacz</value>
+    <value>ビュー</value>
   </data>
 </root>
