--- a/WebApplicationLogin/Resources/HomeLang.Pl.resx
+++ b/WebApplicationLogin/Resources/HomeLang.Pl.resx
@@ -183,4 +183,7 @@
   <data name="Zaloguj" xml:space="preserve">
     <value>Zaloguj</value>
   </data>
+  <data name="Ogloszenia" xml:space="preserve">
+    <value>Ogłoszenia</value>
+  </data>
 </root>
