--- a/WebApplicationLogin/Resources/HomeLang.resx
+++ b/WebApplicationLogin/Resources/HomeLang.resx
@@ -180,4 +180,7 @@
   <data name="Zobacz" xml:space="preserve">
     <value>Zobacz</value>
   </data>
+  <data name="Ogloszenia" xml:space="preserve">
+    <value>Ogłoszenia</value>
+  </data>
 </root>
